--- a/1_car_sharing/index.html
+++ b/1_car_sharing/index.html
@@ -11,6 +11,157 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="wrap">
+
+      <header class="page-header">
+          <div class="container page-header_container">
+
+              <a href="" class="page-logo">
+                  <img src="images/icon_logo_normal.svg" alt="Car Sharing" class="page-logo_img">
+                  <span class="page-logo_text"><span>Car</span> Sharing</span>
+              </a>
+
+              <nav class="page-menu">
+                  <ul class="page-menu_list">
+                      <li class="page-menu_list-el">
+                          <a href="" class="page-menu_list-link">
+                              Home
+                          </a>
+                      </li>
+                      <li class="page-menu_list-el">
+                          <a href="" class="page-menu_list-link">
+                             Blog
+                          </a>
+                      </li>
+                      <li class="page-menu_list-el">
+                          <a href="" class="page-menu_list-link">
+                             Service
+                          </a>
+                      </li>
+                      <li class="page-menu_list-el">
+                          <a href="" class="page-menu_list-link">
+                              Contact
+                          </a>
+                      </li>
+
+                  </ul>
+              </nav>
+
+          </div>
+      </header>
+
+      <div class="main-banner">
+          <h1 class="main-banner_title">Car Sharing</h1>
+          <p class="main-banner_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, nisi.
+          </p>
+          <div class="main-banner_buttons">
+              <a href="" class="main-banner_button main-banner_button1">Share Car</a>
+              <a href="" class="main-banner_button main-banner_button2">Key Features</a>
+          </div>
+      </div>
+      <div class="main-banner_arrow"></div>
+
+      <section class="main-section main-blog">
+          <h2 class="section-title">
+              Blog
+          </h2>
+
+          <div class="container main-blog_container">
+              <div class="row">
+                  <div class="col">
+
+                      <article class="main-blog_box">
+                          <img src="images/photo1.png" alt="" class="main-blog_box-img">
+                          <h3 class="main-blog_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-blog_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-blog_box-link">
+                              Read more
+                          </a>
+                      </article>
+
+
+                  </div>
+                  <div class="col">
+                      <article class="main-blog_box">
+                          <img src="images/photo2.png" alt="" class="main-blog_box-img">
+                          <h3 class="main-blog_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-blog_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-blog_box-link">
+                              Read more
+                          </a>
+                      </article>
+                  </div>
+                  <div class="col">
+                      <article class="main-blog_box">
+                          <img src="images/photo3.png" alt="" class="main-blog_box-img">
+                          <h3 class="main-blog_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-blog_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-blog_box-link">
+                              Read more
+                          </a>
+                      </article>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <section class="main-section main-service">
+          <h2 class="section-title_service">Service</h2>
+          <div class="container main-service_container">
+              <div class="row">
+                  <div class="col">
+                      <article class="main-service_box">
+                          <img src="images/mini1.png" alt="" class="main-service_box-img">
+                          <h3 class="main-service_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-service_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-service_box-link">
+                              Read more
+                          </a>
+                      </article>
+                  </div>
+                  <div class="col">
+                      <article class="main-service_box">
+                          <img src="images/mini2.png" alt="" class="main-service_box-img">
+                          <h3 class="main-service_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-service_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-service_box-link">
+                              Read more
+                          </a>
+                      </article>
+                  </div>
+                  <div class="col">
+                      <article class="main-service_box">
+                          <img src="images/mini3.png" alt="" class="main-service_box-img">
+                          <h3 class="main-service_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-service_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-service_box-link">
+                              Read more
+                          </a>
+                      </article>
+                  </div>
+                  <div class="col">
+                      <article class="main-service_box">
+                          <img src="images/mini4.png" alt="" class="main-service_box-img">
+                          <h3 class="main-service_box-title">Lorem ipsum dolor sit.</h3>
+                          <p class="main-service_box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores culpa deleniti eos incidunt nobis placeat, quia unde. Aut, placeat!
+                          </p>
+                          <a href="" class="main-service_box-link">
+                              Read more
+                          </a>
+                      </article>
+                  </div>
+              </div>
+          </div>
+
+      </section>
+
+  </div>
 
 
 
