--- a/1_car_sharing/index.html
+++ b/1_car_sharing/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Car Sharing</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;800;900&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;800;900&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -161,7 +161,88 @@
 
       </section>
 
+
+      <section class="main-section  main-contact">
+          <h2 class="section-title section-title--light">Contact</h2>
+          <div class="container main-contact_container">
+              <form action="" class="form">
+                  <div class="form-row">
+                      <label for="forName" class="hidden">Type your name</label>
+                      <input type="text" id="forName" class="form-control" placeholder="Type your name">
+                  </div>
+                  <div class="form-row">
+                      <label for="formEmail" class="hidden">Type your email</label>
+                      <input type="email" id="formEmail" class="form-control" placeholder="Type your email">
+                  </div>
+                  <div class="form-row">
+                      <label for="formMessage" class="hidden">Type your message</label>
+                      <textarea type="email" id="formMessage" class="form-control" placeholder="Type your message"></textarea>
+                  </div>
+
+                        <div class="form-row">
+                                  <input type="checkBox" class="form-checkbox" id="formRegulation">
+                                  <label for="formRegulation" class="form-checkbox-label">
+                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloremque doloribus eaque esse eum excepturi inventore iste itaque, modi nostrum placeat, quod veniam. Beatae corporis illum, iusto magnam maxime quam quibusdam veritatis voluptatem voluptatum. Dicta harum molestiae neque possimus quisquam!
+                                  </label>
+
+                        </div>
+                  <div class="form-row">
+                      <button type="submit" class="form-button">Send</button>
+                  </div>
+              </form>
+          </div>
+      </section>
+
+
+      <footer class="page-footer">
+          <div class="container page-footer_container">
+              <a href="" class="page-footer_logo">
+                  <img src="images/icon_logo_normal.svg" alt="Car Sharing" class="page-footer-logo_img">
+                  <span class="page-footer-logo_text"><span> Car</span> Sharing</span>
+              </a>
+
+              <div class="page-footer-row">
+                  <nav class="page-footer-menu">
+                      <ul class="page-footer-menu_list">
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link page-footer-menu_list-link-first">Home page</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">Share regulator</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">Price</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">About Us</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">Our fleet</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">Gallery</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">Our clients</a>
+                          </li>
+                          <li class="page-footer-menu_list-el">
+                              <a href="" class="page-footer-menu_list-link">contact</a>
+                          </li>
+                      </ul>
+
+                  </nav>
+                  <small class="page-footer-copyright">
+                      Copyright Coders Lab
+                  </small>
+              </div>
+
+          </div>
+      </footer>
+
+
+
   </div>
+  <script src="script.js"></script>
 
 
 
