--- a/1_car_sharing/index.html
+++ b/1_car_sharing/index.html
@@ -109,7 +109,7 @@
       </section>
 
       <section class="main-section main-service">
-          <h2 class="section-title_service">Service</h2>
+          <h2 class="section-title section-title--light">Service</h2>
           <div class="container main-service_container">
               <div class="row">
                   <div class="col">
@@ -163,8 +163,10 @@
 
 
       <section class="main-section  main-contact">
-          <h2 class="section-title section-title--light">Contact</h2>
+          <h2 class="section-title">Contact</h2>
+
           <div class="container main-contact_container">
+
               <form action="" class="form">
                   <div class="form-row">
                       <label for="forName" class="hidden">Type your name</label>
@@ -179,14 +181,16 @@
                       <textarea type="email" id="formMessage" class="form-control" placeholder="Type your message"></textarea>
                   </div>
 
-                        <div class="form-row">
-                                  <input type="checkBox" class="form-checkbox" id="formRegulation">
-                                  <label for="formRegulation" class="form-checkbox-label">
+                  <div class="form-row">
+                      <div class="checkbox">
+                                  <input type="checkBox" class="form-checkbox_input" id="formRegulation">
+                                  <label for="formRegulation" class="form-checkbox_label">
                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloremque doloribus eaque esse eum excepturi inventore iste itaque, modi nostrum placeat, quod veniam. Beatae corporis illum, iusto magnam maxime quam quibusdam veritatis voluptatem voluptatum. Dicta harum molestiae neque possimus quisquam!
                                   </label>
 
-                        </div>
-                  <div class="form-row">
+                      </div>
+                  </div>
+                  <div class="form-row form-row--last">
                       <button type="submit" class="form-button">Send</button>
                   </div>
               </form>
